# tx-practice

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: GenerateClangComplete.cmake
include/txp/: elapsed_time.hpp
src/: b2pl.cpp
test/txp/: elapsed_time.cpp
